# hangman

./: .flake8  .gitignore  README.md  dictionary.txt  pyproject.toml
data/: dictionary.txt
src/hangman/: letter.py  main.py  paths.py  tools.py
